(chores) camel-base: use unmodifiable list when possible